# harmony

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Harmony_example_walkthrough.ipynb  LICENSE  MANIFEST.in  README.md  docker-compose.yml  example_questionnaires.json  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  test_read_html.ipynb  test_read_pdf.ipynb  tox.ini  update.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: deploy-file-parser-to-aws-lambda.yml  deploy-file-processor-to-aws-lambda.yml  deploy-matcher-to-aws-lambda.yml  deploy-pdf-tika-parser-to-aws-lambda.yml  deploy_fastapi_to_azure.yml  docker.yml  release.yml  test.yml
deployment/: README.md  step_function_express_state_machine.json
deployment/file_processor/: .gitignore  3-deploy.sh  4-invoke.sh  bucket-name.txt  function.py  out.yml  template.yml
deployment/file_processor/function/: lambda_function.py  requirements.txt  schema.py
deployment/file_processor_docker_lambda/: Dockerfile  README.md  deploy.sh  template.yaml
deployment/file_processor_docker_lambda/app/: app.py  test_file_processor_lambda.py
deployment/file_to_instruments_lambda_python/: deploy_cdk.py
deployment/matcher-lambda/: .gitignore  4-invoke.sh  5-cleanup.sh  out.yml  template.yml
deployment/matcher-lambda/function/: lambda_function.py
deployment/matcher_lambda/: 2-add-deps.sh  3-deploy.sh  4-invoke.sh  README.md  template.yml  tmp
deployment/matcher_lambda/function/: lambda_function.py  test_matcher_lambda.py
deployment/old/scikit-learn-inference-docker-lambda/: build.sh  requirements.txt
deployment/old/text_to_instruments_lambda_python/: .gitignore  0-run-tests.sh  2-build-layer.sh  3-deploy.sh  out.yml
deployment/optional_transformer_llm_huggingface_lambda/: README.md
deployment/optional_transformer_llm_huggingface_lambda/inference/: Dockerfile
deployment/pdf_processor_tika_aws_lambda_java/: 2-deploy.sh  pom.xml  template-mvn.yml
deployment/pdf_processor_tika_lambda_java/: 2-deploy.sh  3-invoke.sh  README.md  pom.xml  template.yml
deployment/scikit-learn-inference-docker-lambda/: .gitignore  Dockerfile  build.sh  requirements.txt  template.yaml
deployment/scikit-learn-inference-docker-lambda/app/: app.py  test_lambda_function.py
deployment/terraform/: lambda.tf  mhc_questions.json  network.tf  root.tf  security.tf  state_machine.tf
deployment/text_to_instruments_lambda_python/: 2-build-layer.sh  4-invoke.sh  5-cleanup.sh  out.yml
deployment/text_to_instruments_lambda_python/function/: lambda_function.py  requirements.txt  test_lambda_function.py
deployment/transformer_llm_huggingface_aws_lambda/: README.md
deployment/transformer_llm_huggingface_aws_lambda/inference/: Dockerfile
deployment/transformer_llm_huggingface_lambda/: README.md  app.py
deployment/transformer_llm_huggingface_lambda/inference/: vectorisation.py
harmony_fastapi/: .gitignore  Dockerfile  LICENSE  README.md  build_deploy.sh  main.py  requirements.txt  run_docker_container.sh
harmony_fastapi/core/: logger.py  settings.py
harmony_fastapi/docs/: generate_tiny_example_pdf.py  generate_tiny_example_xlsx.py  index.html
harmony_fastapi/routers/: health_check_router.py  info_router.py  text_router.py
harmony_pypi_package/: .gitignore  LICENSE  README.md  setup.py
harmony_pypi_package/src/harmony/: __init__.py
harmony_pypi_package/tests/: test_convert_excel_openpyxl.py  test_convert_pdf.py  test_module1.py
images/: generate_diagram.py  generate_diagram_aws.py
serverless_deployment/: README.md
serverless_deployment/file_processor_docker_lambda/: README.md  template.yaml  tmp
serverless_deployment/file_processor_docker_lambda/app/: app.py  test_file_processor_lambda.py
serverless_deployment/matcher_lambda/: .gitignore  0-run-tests.sh  2-add-deps.sh  example_to_match.json  template.yml
serverless_deployment/matcher_lambda/function/: requirements.txt  test_matcher_lambda.py
serverless_deployment/optional_transformer_llm_huggingface_lambda/: README.md
serverless_deployment/optional_transformer_llm_huggingface_lambda/inference/: vectorisation.py
serverless_deployment/pdf_processor_tika_lambda_java/: .gitignore  3-invoke.sh  4-cleanup.sh  template.yml  tiny_pdf.json
serverless_deployment/terraform/: efs.tf  lambda.tf  mhc_all_metadatas.json  root.tf  security.tf  terraform_import.sh
src/: crosswalk_table.csv  harmony_test.py  log.txt  sim_with_polarity.txt  test_batch_processing.py  test_task3_task4.py
src/harmony/: __init__.py  examples.py
src/harmony/matching/: affinity_propagation_clustering.py  cluster.py  default_matcher.py  deterministic_clustering.py  generate_cluster_topics.py  generate_crosswalk_table.py  generate_semantic_keywords.py  hdbscan_clustering.py  instrument_to_instrument_similarity.py  kmeans_clustering.py  match_groups.py  matcher.py  matcher_utils.py  negator.py  visualize_questions_gui.py  wmd_matcher.py
src/harmony/parsing/: 20240719_pdf_question_extraction_sklearn_crf_model.pkl  capi_parser.py  create_sample_submission_amol.py  crf_text_model.pkl  excel_parser.py  google_forms_parser.py  (+6 more)
tests/: .pylintrc  test_affinity_propagation_clustering.py  test_batch.py  test_batching_in_matcher.py  test_catalogue_deprecation_warnings.py  test_cluster.py  test_convert_excel_openpyxl.py  test_convert_excel_xlsxwriter.py  test_convert_html.py  test_convert_pdf.py  test_convert_text.py  test_create_instrument_from_list.py  test_crosswalk.py  test_deterministic_clustering.py  test_excel_tolerant.py  test_export_pdf_report.py  test_generate_cluster_topics.py  test_google_forms_parser.py  test_hdbscan_clustering.py  test_instrument_to_instrument_similarity.py  test_match.py  test_match_catalogue_instruments.py  test_match_mhc.py  test_match_negative_polarity.py  test_mhc_filtering.py  test_negator.py  test_null_and_empty_handling.py  test_pdf_tables.py  test_response_options.py  test_topics.py  test_url_loader.py  test_visualize_questions_gui.py  wellbeing-scales-list.xlsx
(+82 files in other folders)
